# affectlens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/images/: pipeline.mmd
examples/: README.md  demo.py  getting_started.ipynb  samples.json
scripts/: fetch_samples.py  make_readme_figures.py
src/affectlens/: __init__.py  align.py  baseline.py  cli.py  clips.py  config.py  encoding.py  highlevel.py  lowlevel.py  midlevel.py  pipeline.py  ratings.py  synthetic.py
src/affectlens/models/: NOTICE
tests/: test_pipeline.py
webui/: app.py
